--- a/app/src/main/res/layout/activity_post_description.xml
+++ b/app/src/main/res/layout/activity_post_description.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FEF9C2"
     tools:context=".PostDescription"
 
     android:fillViewport="true"
@@ -30,13 +29,12 @@
             android:layout_gravity="center"
             >
 
-            <Button
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/solid_btn_red"
                 android:text="@string/postdescription_textview_postinfo"
-                android:textColor="#FFFFFF"
-                android:textSize="20dp" />
+
+                android:textSize="20dp" ></com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
