--- a/app/src/main/res/layout/activity_hospital_and_blood_bank.xml
+++ b/app/src/main/res/layout/activity_hospital_and_blood_bank.xml
@@ -85,31 +85,31 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         android:layout_weight="1"
                         android:text="Name"
-                        android:textColor="@color/green"
-                        android:textSize="20sp"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="24sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         android:layout_weight="1"
                         android:text="Phone Number"
-                        android:textColor="@color/green"
-                        android:textSize="20sp"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="24sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         android:layout_weight="1"
                         android:text="Location"
-                        android:textColor="@color/green"
-                        android:textSize="20sp"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="24sp"
                         android:textStyle="bold" />
                 </LinearLayout>
 
