--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -79,14 +79,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 ></LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                tools:ignore="Suspicious0dp"></LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -129,11 +123,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                tools:ignore="Suspicious0dp"></LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:weightSum="6"
                 android:orientation="horizontal"
@@ -170,10 +159,7 @@
                         ></com.google.android.material.textfield.TextInputEditText>
                 </LinearLayout>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:ignore="Suspicious0dp"></LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -412,15 +398,14 @@
                 android:layout_gravity="center_horizontal"
                 >
 
-                <Button
-                    android:id="@+id/profile_button_seerespons"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/profile_button_seeresponses"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:background="@drawable/solid_button"
+                    style="@style/StyleButton"
                     android:text="See Your Responses"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" />
+                    android:textSize="24sp" ></com.google.android.material.textfield.TextInputEditText>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
